--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.97.0",
     "@types/dompurify": "^3.0.5",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.2",
     "bcryptjs": "^3.0.3",
     "dompurify": "^3.3.1",
     "framer-motion": "^12.34.3",
